Better support for scala in eclipse